[gd_scene load_steps=39 format=3 uid="uid://b03rb3xn06wdt"]

[ext_resource type="Texture2D" uid="uid://c7x5uaf23veqn" path="res://assets/background/background_laus3.jpg" id="1_hh2pn"]
[ext_resource type="Script" uid="uid://cc7ysxw6fjins" path="res://scripts2/Main2.gd" id="1_mi7a0"]
[ext_resource type="Script" uid="uid://l6ni1thqj2rc" path="res://scripts2/CardManager2.gd" id="2_hh2pn"]
[ext_resource type="Script" uid="uid://brvcjdgdrtuuj" path="res://scripts2/PlayerHand.gd" id="3_rt2qh"]
[ext_resource type="Texture2D" uid="uid://ckgnqsiv24qi5" path="res://assets/cards/backcard_texture.png" id="5_kbxn7"]
[ext_resource type="Script" uid="uid://4xw5qpaqkox7" path="res://scripts2/Deck2.gd" id="5_mi7a0"]
[ext_resource type="FontFile" uid="uid://c4pe7v7qaoxgf" path="res://assets/fonts/Comfortaa-Bold.ttf" id="7_0hday"]
[ext_resource type="Script" uid="uid://cwl8tk4iegf8" path="res://scripts2/InputManager2.gd" id="7_mi7a0"]
[ext_resource type="PackedScene" uid="uid://b0jyw0dskbw1m" path="res://scenes2/Enemy2.tscn" id="8_hh2pn"]
[ext_resource type="PackedScene" uid="uid://b3lr5g3qlghm6" path="res://scenes2/Mana.tscn" id="9_pnuyh"]
[ext_resource type="PackedScene" uid="uid://cx1mg4bd0jghh" path="res://scenes2/PlayerHealth.tscn" id="10_4yr0x"]
[ext_resource type="PackedScene" uid="uid://mc42etnrpf08" path="res://scenes2/TurnGauge.tscn" id="11_kbxn7"]
[ext_resource type="PackedScene" uid="uid://bmxpd3d64j602" path="res://scenes2/EnvSocGauge.tscn" id="11_r80hs"]
[ext_resource type="Script" uid="uid://b5hltnykd4y4q" path="res://scripts2/BattleManager2.gd" id="12_hh2pn"]
[ext_resource type="PackedScene" uid="uid://ne1mtcf1gjyd" path="res://scenes/scene_transition_animation.tscn" id="13_euqgl"]
[ext_resource type="PackedScene" uid="uid://h3dwx6rdsu7d" path="res://scenes/menu_map.tscn" id="14_bfg1n"]
[ext_resource type="AudioStream" uid="uid://doxs0784q3lr7" path="res://assets/musics/monster_attack_gazo.mp3" id="16_rt2qh"]
[ext_resource type="AudioStream" uid="uid://cyjwxie7s7x6o" path="res://assets/musics/monster_attack_gazo2.mp3" id="17_qp0d8"]

[sub_resource type="Gradient" id="Gradient_a2uni"]
offsets = PackedFloat32Array(0.62013)
colors = PackedColorArray(0.882353, 0.372549, 0, 0.376471)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_qp0d8"]
gradient = SubResource("Gradient_a2uni")
fill = 2

[sub_resource type="Animation" id="Animation_f2d05"]
resource_name = "FireScreenAppear"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FireScreen:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FireScreen:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_7o55v"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FireScreen:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FireScreen:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hhugf"]
_data = {
&"FireScreenAppear": SubResource("Animation_f2d05"),
&"RESET": SubResource("Animation_7o55v")
}

[sub_resource type="Animation" id="Animation_hhugf"]
resource_name = "FireScreenDisappear"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FireScreen:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FireScreen:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_pvgnn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FireScreen:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FireScreen:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fd6ec"]
_data = {
&"FireScreenDisappear": SubResource("Animation_hhugf"),
&"RESET": SubResource("Animation_pvgnn")
}

[sub_resource type="Gradient" id="Gradient_7u8nh"]
offsets = PackedFloat32Array(0.590909)
colors = PackedColorArray(0, 0, 0, 0.54902)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_kbxn7"]
gradient = SubResource("Gradient_7u8nh")

[sub_resource type="Animation" id="Animation_fd6ec"]
resource_name = "DarkenScreenAppear"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DarkenScreen:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DarkenScreen:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_7rc2c"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DarkenScreen:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DarkenScreen:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_u378f"]
_data = {
&"DarkenScreenAppear": SubResource("Animation_fd6ec"),
&"RESET": SubResource("Animation_7rc2c")
}

[sub_resource type="Animation" id="Animation_u378f"]
resource_name = "DarkenScreenDissappear"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DarkenScreen:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DarkenScreen:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_2m120"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DarkenScreen:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DarkenScreen:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vne51"]
_data = {
&"DarkenScreenDissappear": SubResource("Animation_u378f"),
&"RESET": SubResource("Animation_2m120")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xyrrl"]
size = Vector2(150, 210)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mf653"]
bg_color = Color(0.60933, 0.60933, 0.60933, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6fgie"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pnibb"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="Main2" type="Node2D"]
script = ExtResource("1_mi7a0")

[node name="Background" type="Sprite2D" parent="."]
z_index = -10
position = Vector2(960, 540)
scale = Vector2(1.55, 1.55)
texture = ExtResource("1_hh2pn")

[node name="FireScreen" type="Node2D" parent="."]

[node name="FireScreen" type="TextureRect" parent="FireScreen"]
visible = false
z_index = -2
offset_right = 1920.0
offset_bottom = 1080.0
texture = SubResource("GradientTexture2D_qp0d8")

[node name="FireScreenAppear" type="AnimationPlayer" parent="FireScreen"]
libraries = {
&"": SubResource("AnimationLibrary_hhugf")
}

[node name="FireScreenDisappear" type="AnimationPlayer" parent="FireScreen"]
libraries = {
&"": SubResource("AnimationLibrary_fd6ec")
}

[node name="DarkenScreen" type="Node2D" parent="."]

[node name="DarkenScreen" type="TextureRect" parent="DarkenScreen"]
visible = false
z_index = -2
offset_right = 1920.0
offset_bottom = 1080.0
texture = SubResource("GradientTexture2D_kbxn7")

[node name="DarkenScreenAppear" type="AnimationPlayer" parent="DarkenScreen"]
libraries = {
&"": SubResource("AnimationLibrary_u378f")
}

[node name="DarkenScreenDisappear" type="AnimationPlayer" parent="DarkenScreen"]
libraries = {
&"": SubResource("AnimationLibrary_vne51")
}

[node name="PlayerHand" type="Node2D" parent="."]
script = ExtResource("3_rt2qh")

[node name="Deck2" type="Node2D" parent="."]
position = Vector2(150, 890)
script = ExtResource("5_mi7a0")

[node name="Sprite2D" type="Sprite2D" parent="Deck2"]
z_index = -2
scale = Vector2(0.6, 0.6)
texture = ExtResource("5_kbxn7")

[node name="Area2D" type="Area2D" parent="Deck2"]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Deck2/Area2D"]
shape = SubResource("RectangleShape2D_xyrrl")
disabled = true

[node name="Label" type="Label" parent="Deck2"]
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 3.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("7_0hday")
theme_override_font_sizes/font_size = 25
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="InputManager2" type="Node2D" parent="."]
script = ExtResource("7_mi7a0")

[node name="Enemy2" parent="." instance=ExtResource("8_hh2pn")]

[node name="Mana" parent="." instance=ExtResource("9_pnuyh")]
position = Vector2(1625, 600)
scale = Vector2(0.75, 0.75)

[node name="PlayerHealth" parent="." instance=ExtResource("10_4yr0x")]
visible = false
position = Vector2(175, 550)
scale = Vector2(0.75, 0.75)

[node name="TurnGauge" parent="." instance=ExtResource("11_kbxn7")]
position = Vector2(50, 300)
scale = Vector2(3, 3)

[node name="EnvSocGauge" parent="." instance=ExtResource("11_r80hs")]
position = Vector2(200, 125)

[node name="BattleManager2" type="Node" parent="."]
script = ExtResource("12_hh2pn")

[node name="BattleTimer1" type="Timer" parent="."]

[node name="BattleTimer2" type="Timer" parent="."]

[node name="BattleTimer4" type="Timer" parent="."]

[node name="BattleTimer3" type="Timer" parent="."]

[node name="Scene_transition_animation" parent="." instance=ExtResource("13_euqgl")]

[node name="Menu_map" parent="." instance=ExtResource("14_bfg1n")]

[node name="CardManager2" type="Node2D" parent="."]
script = ExtResource("2_hh2pn")

[node name="EndTurnButton" type="Button" parent="."]
offset_left = 1650.0
offset_top = 850.0
offset_right = 1850.0
offset_bottom = 950.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("7_0hday")
theme_override_font_sizes/font_size = 35
theme_override_styles/hover = SubResource("StyleBoxFlat_mf653")
theme_override_styles/pressed = SubResource("StyleBoxFlat_6fgie")
theme_override_styles/normal = SubResource("StyleBoxFlat_pnibb")
text = "End Turn"

[node name="MonsterBaseAttack" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_rt2qh")
bus = &"SFX"

[node name="MonsterBigAttack" type="AudioStreamPlayer" parent="."]
stream = ExtResource("17_qp0d8")
bus = &"SFX"

[connection signal="pressed" from="EndTurnButton" to="BattleManager2" method="_on_end_turn_button_pressed"]
